--- a/index.html
+++ b/index.html
@@ -231,6 +231,11 @@
             .section {
                 padding: 1.5rem;
             }
+            .profile-pic {
+        width: 80px;
+        height: 80px;
+        margin-bottom: 0.5rem;
+    }
 
 
 
@@ -464,4 +469,5 @@
     </script>
 </body>
 </html>
+
 
