--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
 
       // Load Model 3D (format .glb / .gltf)
       const gltfLoader = new THREE.GLTFLoader();
-      gltfLoader.load('keju.glb', function(gltf) {
+      gltfLoader.load('Space_rocket.glb', function(gltf) {
         model = gltf.scene;
-        model.scale.set(2, 2, 2); // atur ukuran model
-        model.position.set(0, -1, 0); // posisi model
+        model.scale.set(1, 1, 1); // atur ukuran model
+        model.position.set(0, -7, 0); // posisi model
         scene.add(model);
       }, undefined, function(error) {
         console.error('Error loading model:', error);
