--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>3D Text Galaxy Style + Model</title>
+  <title>3D Flexible Portfolio</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/FontLoader.js"></script>
@@ -15,124 +15,158 @@
   </style>
 </head>
 <body>
-  <script>
-    let scene, camera, renderer, textMesh, controls, stars, model;
+<script>
+  // === CONFIG TEXT ===
+  const TEXTS = [
+    { 
+      text: "Bima Sakti", 
+      position: [0, -8, 0], 
+      size: 1, height: 0.2, 
+      color: 0x00ffff, 
+      rotation: [0, 0, 0], 
+      bevel: true,
+      glow: false
+    },
+    { 
+      text: "Portfolio 3D", 
+      position: [0, -7, 0], 
+      size: 1, height: 0.2, 
+      color: 0xff0000, 
+      rotation: [0, 0, 0], 
+      bevel: true,
+      glow: false
+    }
+  ];
 
-    function init() {
-      // Scene & Kamera
-      scene = new THREE.Scene();
-      camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-      camera.position.set(0, 2, 10);
+  // === CONFIG MODELS ===
+  const MODELS = [
+    { path: "Space_rocket.glb", scale: [1,1,1], position: [0, -5, 0], rotation: [0,0,0], autoRotate: true },
+    // { path: "keju.glb", scale: [2,2,2], position: [5, -5, 0], rotation: [0,1,0], autoRotate: false },
+  ];
 
-      // Renderer
-      renderer = new THREE.WebGLRenderer({ antialias: true });
-      renderer.setSize(window.innerWidth, window.innerHeight);
-      document.body.appendChild(renderer.domElement);
+  let scene, camera, renderer, controls, stars;
+  const fontLoader = new THREE.FontLoader();
+  const gltfLoader = new THREE.GLTFLoader();
 
-      // Cahaya
-      const ambientLight = new THREE.AmbientLight(0xffffff, 0.5); 
-      scene.add(ambientLight);
+  // === Keyboard Control Vars ===
+  let keys = {};
 
-      const pointLight = new THREE.PointLight(0xffffff, 1);
-      pointLight.position.set(10, 10, 10);
-      scene.add(pointLight);
+  document.addEventListener("keydown", (e) => { keys[e.code] = true; });
+  document.addEventListener("keyup", (e) => { keys[e.code] = false; });
 
-      // Load Font dan bikin text
-      const loader = new THREE.FontLoader();
-      loader.load("https://threejs.org/examples/fonts/helvetiker_regular.typeface.json", function (font) {
-        const textGeometry = new THREE.TextGeometry("", {
-          font: font,
-          size: 1,
-          height: 0.3,
-          curveSegments: 12,
-          bevelEnabled: true,
-          bevelThickness: 0.05,
-          bevelSize: 0.05,
-          bevelSegments: 5
-        });
+  function keyboardControls() {
+    const speed = 0.2; // kecepatan gerak kamera
+    if (keys["KeyW"]) camera.position.z -= speed; // maju
+    if (keys["KeyS"]) camera.position.z += speed; // mundur
+    if (keys["KeyA"]) camera.position.x -= speed; // kiri
+    if (keys["KeyD"]) camera.position.x += speed; // kanan
+    if (keys["KeyQ"]) camera.position.y -= speed; // turun
+    if (keys["KeyE"]) camera.position.y += speed; // naik
+  }
 
-        const textMaterial = new THREE.MeshStandardMaterial({
-          color: 0xffffff,
-          metalness: 0.8,
-          roughness: 0.3
-        });
+  function init() {
+    scene = new THREE.Scene();
+    camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+    camera.position.set(0, 2, 15);
 
-        textMesh = new THREE.Mesh(textGeometry, textMaterial);
-        textGeometry.center();
-        textMesh.position.y = 2; // text agak ke atas biar ga nabrak model
-        scene.add(textMesh);
+    renderer = new THREE.WebGLRenderer({antialias:true});
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    document.body.appendChild(renderer.domElement);
+
+    // Cahaya
+    scene.add(new THREE.AmbientLight(0xffffff, 0.6));
+    const pointLight = new THREE.PointLight(0xffffff, 1);
+    pointLight.position.set(10,10,10);
+    scene.add(pointLight);
+
+    // Bintang galaxy
+    const starGeometry = new THREE.BufferGeometry();
+    const starCount = 3000;
+    const starPositions = new Float32Array(starCount*3);
+    for (let i=0;i<starCount*3;i++) starPositions[i] = (Math.random()-0.5)*400;
+    starGeometry.setAttribute("position", new THREE.BufferAttribute(starPositions,3));
+    const starMaterial = new THREE.PointsMaterial({ color: 0xffffff, size: 1, transparent:true, opacity:0.9 });
+    stars = new THREE.Points(starGeometry, starMaterial);
+    scene.add(stars);
+
+    // Load semua Text & Model
+    TEXTS.forEach(t => loadText(t));
+    MODELS.forEach(m => loadModel(m));
+
+    // Controls
+    controls = new THREE.OrbitControls(camera, renderer.domElement);
+    controls.enableDamping = true;
+    controls.dampingFactor = 0.05;
+    controls.enablePan = true; // aktifin pan juga
+    controls.minDistance = 5;
+    controls.maxDistance = 50;
+
+    window.addEventListener("resize", onWindowResize, false);
+  }
+
+  function loadText(cfg) {
+    fontLoader.load("https://threejs.org/examples/fonts/helvetiker_regular.typeface.json", function(font){
+      const textGeometry = new THREE.TextGeometry(cfg.text, {
+        font: font,
+        size: cfg.size || 1,
+        height: cfg.height || 0.2,
+        curveSegments: 12,
+        bevelEnabled: cfg.bevel || false,
+        bevelThickness: 0.03,
+        bevelSize: 0.03,
+        bevelSegments: 3
       });
 
-      // Tambahin bintang (galaxy style)
-      const starGeometry = new THREE.BufferGeometry();
-      const starCount = 3000;
-      const starPositions = new Float32Array(starCount * 3);
+      let mat = new THREE.MeshStandardMaterial({ color: cfg.color || 0xffffff, metalness: 0.8, roughness: 0.3 });
+      
+      const textMesh = new THREE.Mesh(textGeometry, mat);
+      textGeometry.center();
+      textMesh.position.set(...(cfg.position || [0,0,0]));
+      textMesh.rotation.set(...(cfg.rotation || [0,0,0]));
 
-      for (let i = 0; i < starCount * 3; i++) {
-        starPositions[i] = (Math.random() - 0.5) * 400;
+      if(cfg.glow){
+        const glow = new THREE.MeshBasicMaterial({ color: cfg.color || 0xffffff });
+        textMesh.material = [mat, glow];
       }
 
-      starGeometry.setAttribute('position', new THREE.BufferAttribute(starPositions, 3));
+      scene.add(textMesh);
+    });
+  }
 
-      const starMaterial = new THREE.PointsMaterial({
-        color: 0xffffff,
-        size: 1,
-        sizeAttenuation: true,
-        transparent: true,
-        opacity: 0.9
-      });
+  function loadModel(cfg) {
+    gltfLoader.load(cfg.path, function(gltf){
+      const model = gltf.scene;
+      model.scale.set(...(cfg.scale || [1,1,1]));
+      model.position.set(...(cfg.position || [0,0,0]));
+      model.rotation.set(...(cfg.rotation || [0,0,0]));
+      scene.add(model);
 
-      stars = new THREE.Points(starGeometry, starMaterial);
-      scene.add(stars);
-
-      // Load Model 3D (format .glb / .gltf)
-      const gltfLoader = new THREE.GLTFLoader();
-      gltfLoader.load('Space_rocket.glb', function(gltf) {
-        model = gltf.scene;
-        model.scale.set(1, 1, 1); // atur ukuran model
-        model.position.set(0, -7, 0); // posisi model
-        scene.add(model);
-      }, undefined, function(error) {
-        console.error('Error loading model:', error);
-      });
-
-      // Kontrol kamera
-      controls = new THREE.OrbitControls(camera, renderer.domElement);
-      controls.enableDamping = true;
-      controls.dampingFactor = 0.05;
-      controls.enablePan = false;
-      controls.minDistance = 5;
-      controls.maxDistance = 30;
-
-      // Resize
-      window.addEventListener("resize", onWindowResize, false);
-    }
-
-    function onWindowResize() {
-      camera.aspect = window.innerWidth / window.innerHeight;
-      camera.updateProjectionMatrix();
-      renderer.setSize(window.innerWidth, window.innerHeight);
-    }
-
-    function animate() {
-      requestAnimationFrame(animate);
-
-      if (textMesh) {
-        textMesh.rotation.y += 0.0005;
+      if(cfg.autoRotate){
+        function rotate(){
+          requestAnimationFrame(rotate);
+          model.rotation.y += 0.003;
+        }
+        rotate();
       }
+    });
+  }
 
-      if (model) {
-        model.rotation.y += 0.001; // biar model muter pelan
-      }
+  function onWindowResize(){
+    camera.aspect = window.innerWidth/window.innerHeight;
+    camera.updateProjectionMatrix();
+    renderer.setSize(window.innerWidth, window.innerHeight);
+  }
 
-      stars.rotation.y += 0.00005;
+  function animate(){
+    requestAnimationFrame(animate);
+    keyboardControls(); // update kamera pake WASD + QE
+    stars.rotation.y += 0.00005;
+    controls.update();
+    renderer.render(scene,camera);
+  }
 
-      controls.update();
-      renderer.render(scene, camera);
-    }
-
-    init();
-    animate();
-  </script>
+  init();
+  animate();
+</script>
 </body>
 </html>
