--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   // === CONFIG MODELS ===
   const MODELS = [
     { path: "Space_rocket.glb", scale: [1,1,1], position: [0, -5, 0], rotation: [0,0,0], autoRotate: true },
-    // { path: "keju.glb", scale: [2,2,2], position: [5, -5, 0], rotation: [0,1,0], autoRotate: false },
+    { path: "Castle Low_Poly.glb", scale: [2,2,2], position: [5, -5, 0], rotation: [0,1,0], autoRotate: false },
   ];
 
   let scene, camera, renderer, controls, stars;
@@ -67,7 +67,7 @@
   function init() {
     scene = new THREE.Scene();
     camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
-    camera.position.set(0, 2, 15);
+    camera.position.set(60, 50, 50);
 
     renderer = new THREE.WebGLRenderer({antialias:true});
     renderer.setSize(window.innerWidth, window.innerHeight);
@@ -98,8 +98,8 @@
     controls.enableDamping = true;
     controls.dampingFactor = 0.05;
     controls.enablePan = true; // aktifin pan juga
-    controls.minDistance = 5;
-    controls.maxDistance = 50;
+    controls.minDistance = 0;
+    controls.maxDistance = 500;
 
     window.addEventListener("resize", onWindowResize, false);
   }
