--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
       transform: translate(calc(-50% + var(--offset-x, 0px)), calc(-50% + var(--offset-y, 0px)));
       transition: transform 0.12s ease;
     }
+
+    @media (hover: hover) and (pointer: fine) {
+      .joystick {
+        display: none;
+      }
+    }
   </style>
 </head>
 <body>
@@ -98,6 +104,12 @@
   const maxGroundSpeed = 0.6;
   const maxAirSpeed = 0.55;
 
+  const pixelRatioLimit = 1.6;
+  const cameraOffset = new THREE.Vector2(30, 18);
+  const cameraLookAtOffset = new THREE.Vector2(8, 4);
+  const cameraDistanceRange = { min: 120, max: 180 };
+  const cameraLerpFactor = 0.08;
+
   document.addEventListener("keydown", event => {
     keys[event.code] = true;
     if (["ArrowUp","ArrowDown","ArrowLeft","ArrowRight","Space","KeyA","KeyD","KeyW","KeyS"].includes(event.code)) {
@@ -118,10 +130,10 @@
     scene.fog = new THREE.Fog(0x03020f, 140, 350);
 
     camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 600);
-    camera.position.set(-5, 12, 90);
+    camera.position.set(-5, 12, getTargetCameraZ());
 
     renderer = new THREE.WebGLRenderer({ antialias: true });
-    renderer.setPixelRatio(window.devicePixelRatio);
+    renderer.setPixelRatio(Math.min(window.devicePixelRatio, pixelRatioLimit));
     renderer.setSize(window.innerWidth, window.innerHeight);
     renderer.setClearColor(0x03020f, 1);
     document.body.appendChild(renderer.domElement);
@@ -263,6 +275,12 @@
     updateJoystickVisual(0, 0);
   }
 
+  function getTargetCameraZ() {
+    const aspect = window.innerWidth / window.innerHeight;
+    const normalized = THREE.MathUtils.clamp((aspect - 0.85) / 1.4, 0, 1);
+    return THREE.MathUtils.lerp(cameraDistanceRange.min, cameraDistanceRange.max, normalized);
+  }
+
   function updateRocket() {
     if (!rocket) return;
 
@@ -392,11 +410,18 @@
   function updateCamera() {
     if (!rocket) return;
 
-    const targetX = rocket.position.x + 30;
-    const targetY = rocket.position.y + 18;
-    camera.position.x += (targetX - camera.position.x) * 0.08;
-    camera.position.y += (targetY - camera.position.y) * 0.08;
-    camera.lookAt(rocket.position.x + 8, rocket.position.y + 4, rocket.position.z);
+    const targetX = rocket.position.x + cameraOffset.x;
+    const targetY = rocket.position.y + cameraOffset.y;
+    camera.position.x += (targetX - camera.position.x) * cameraLerpFactor;
+    camera.position.y += (targetY - camera.position.y) * cameraLerpFactor;
+    const desiredZ = getTargetCameraZ();
+    camera.position.z += (desiredZ - camera.position.z) * cameraLerpFactor;
+
+    camera.lookAt(
+      rocket.position.x + cameraLookAtOffset.x,
+      rocket.position.y + cameraLookAtOffset.y,
+      rocket.position.z
+    );
 
     if (stars) {
       stars.position.x = camera.position.x * 0.1;
@@ -414,7 +439,9 @@
   function onWindowResize() {
     camera.aspect = window.innerWidth / window.innerHeight;
     camera.updateProjectionMatrix();
+    renderer.setPixelRatio(Math.min(window.devicePixelRatio, pixelRatioLimit));
     renderer.setSize(window.innerWidth, window.innerHeight);
+    camera.position.z = getTargetCameraZ();
   }
 
   init();
